--- a/Teszt/verseny/Todo
+++ b/Teszt/verseny/Todo
@@ -1,16 +1,14 @@
 - 1 autó amit írányíthat a felhasználó (5.-ik autó)
 - pálya vonalának tárolását megoldani dinamikusan majd megoldani a fájlból való kordinátabetöltést
 - pálya elhagyását nézni (ha lehetséges)
-- végeredmény kiijelzõt befejezni
-- pálya hosszának megmérése az elsõ kör utána és a közelítõ érték kiírása.
-- teljes megtett távolság mérése.
-- távolságot méterben kéne mérni valami szabály alapján.
 - ha célba érnek a kocsik valami kis gif elõ jöhetne
 - kilométer/óra jelzés
 - legnagyobb végsebesség kiírása.
-- ha új játékot indítanánk ugorjon fel egy ablak hogy bíztosan újat kezdünk-e.
 - Nyomvonal megjelenítési hibáját javítani kell.
 - Nyomvonal létrehozásához és tárolásához más mód kell mert iszonyatosan terheli a memóriát. (jelenleg kikommentezve)
 - jobb idõmeghatározás (szektorok/körök)
-- a célvonal elõl induljanak az autók (de ekkor ne legyen semmi se mérve csak onnét induljanak)
-- minden autóról külön külön legyen kiírás hogy legjóbb szektoridõ, legjobb idõ stb (ami van még ötlet az oda), opcionálisan jelenjenek csak meg. Ha nincs annyi autó akkor a felesleg ne látszódjon.
+- minden autóról külön külön legyen kiírás hogy legjóbb szektoridõ, legjobb idõ, legnagyobb sebesség stb (ami van még ötlet az oda), opcionálisan jelenjenek csak meg. Ha nincs annyi autó akkor a felesleg ne látszódjon.
+- beállítások megírása.
+- konfig fájl létrehozása.
+- sárga autó szint le kéne cserélni
+- egy kör távolságánál vegye figyelembe a kezdésnél a IndulasStartVonalElol-t is (feltételbe kerüljön bele ez is)
