--- a/Teszt/verseny/Dev/Readme
+++ b/Teszt/verseny/Dev/Readme
@@ -1,1 +1,1 @@
-A Logó a Schumix Team védjegye. (Mivel a fõfejlesztõje én vagyok Jakosa Csaba (Megax) így felhasználktam itt is. DE NEM KEVERENDÕ ÖSSZE A KÉT PROGRAM!)
+A Logó a Schumix Team védjegye. (Mivel a fõfejlesztõje én vagyok Jakosa Csaba (Megax) így felhasználtam itt is. DE NEM KEVERENDÕ ÖSSZE A KÉT PROGRAM!)
